# Python-Autodub

./: .gitignore  CHANGELOG.md  README.md  install_linux_shortcut.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  versioning.bat
src/: Launch-Tester.ps1  Launch-UI.ps1  Launch_UI.ps1  Launch_UI.sh  config.py  generic_female.txt  pipeline.py  run_dub.py  test_env.py  ui.py  utils.py  worker.py
