[project]
name = "python-autodub"
version = "2.0.0"
description = "AI Auto-Dubbing Studio: WhisperX + GPT-SoVITS V3"
requires-python = "==3.10.19"
dependencies = [
    "numpy==1.22.0",
    "tts==0.22.0",
    "demucs==4.0.1",
    "srt==3.5.3",
    "pydub==0.25.1",
    "sv-ttk==2.6.1",
    "darkdetect",
    "transformers==4.36.2",
    "librosa",
    "soundfile",
    "pyannote-audio==3.1.1",
    "lightning==2.6.1",
    "setuptools==79.0.1",
]


[project.optional-dependencies]
cpu = [
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
  "torch-audiomentations==0.12.0",
  "torch-pitch-shift==1.2.5",
  "torchcodec==0.10.0",
  "torchmetrics==1.8.2",
]
cu121 = [
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
  "torch-audiomentations==0.12.0",
  "torch-pitch-shift==1.2.5",
  "torchcodec==0.10.0",
  "torchmetrics==1.8.2",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
  ],
]

[tool.uv.sources]
# This tells uv EXACTLY which file to grab for each extra
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true